# AutoQueryAI

./: .gitignore  Chinook_MySql.sql  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.py
agents/: chart_agent.py  cleaning_agent.py  embed_agent.py  explainer_agent.py  insight_agent.py  profiler_agent.py  router_agent.py  sql_agent.py
app/: llm_loader.py  main.py
config/: .env.template  model_config.py
core/: auto_join.py  file_parser.py  query_executor.py  schema_embedder.py  schema_handler.py
docs/: README.md
legacy/: README.md  app1.py
models/: chat_history.py  embedding_store.py  query_history.py
tests/: test_file_parser.py  test_schema_handler.py
utils/: erd.py  monitoring.py  profiling.py  ui_enhancements.py
